feat: expose site build logs in console
